# SgTxGNN

./: .gitignore  README.md  pyproject.toml
.github/workflows/: indexnow.yml  news-monitor.yml  pages.yml
config/: fields.yaml
data/news/: keywords.json  matched_news.json  sg_news_latest.json  synonyms.json
data/processed/: drug_mapping.csv  integration_stats.json  repurposing_candidates.csv  txgnn_checkpoint.csv  unified_predictions.csv
data/raw/: sg_hsa_drugs.csv  sg_hsa_drugs.json
docs/: CNAME  Gemfile  _config.yml  about.md  blog.md  downloads.md  drugs.md  evidence-high.md  evidence-low.md  evidence-medium.md  guide.md  index.md  methodology.md  privacy-policy.md  robots.txt  sources.md
docs/_drugs/: abemaciclib.md  abiraterone-acetate.md  acalabrutinib.md  acebutolol.md  aceclofenac.md  acetazolamide.md  acetic-acid.md  acetylcysteine.md  acitretin.md  adapalene.md  adenosine.md  afatinib.md  aflibercept.md  agalsidase-beta.md  agomelatine.md  albendazole.md  albuterol-base.md  alectinib-hydrochloride-161.33-mg-eqv.-alectinib.md  alemtuzumab.md  alfacalcidol.md  alfentanil.md  alfuzosin-hydrochloride.md  alirocumab.md  allopurinol.md  (+1476 more)
model_ckpt/: demo.ipynb  viz.ipynb
prompts/: pharmacist_v5_storytelling.md
scripts/: drug_list.json  generate_drug_pages.py  generate_fhir_resources.py  generate_news_keywords.py  integrate_predictions.py  merge_predictions.py  process_fda_data.py  process_news.py  run_dl_prediction.py  run_kg_prediction.py
tests/: __init__.py  test_disease_mapper.py  test_drugbank_mapper.py  test_normalizer.py  test_repurposing.py
(+63660 files in other folders)
